{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 394,
  "lineage": "c41f6d13-6b1a-543b-193c-77db7db8d5c5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-09T15:07:50.872-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/molten-unison-401314/global/firewalls/terraform-allow-http",
            "log_config": [],
            "name": "terraform-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/networks/terraform-network",
            "priority": 1000,
            "project": "molten-unison-401314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/firewalls/terraform-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-09T15:07:50.808-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/molten-unison-401314/global/firewalls/terraform-allow-https",
            "log_config": [],
            "name": "terraform-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/networks/terraform-network",
            "priority": 1000,
            "project": "molten-unison-401314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/firewalls/terraform-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-12-09T15:07:50.806-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/molten-unison-401314/global/firewalls/terraform-allow-icmp",
            "log_config": [],
            "name": "terraform-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/networks/terraform-network",
            "priority": 1000,
            "project": "molten-unison-401314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/firewalls/terraform-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-09T15:07:50.815-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/molten-unison-401314/global/firewalls/terraform-allow-mysql",
            "log_config": [],
            "name": "terraform-allow-mysql",
            "network": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/networks/terraform-network",
            "priority": 1000,
            "project": "molten-unison-401314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/firewalls/terraform-allow-mysql",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-09T15:07:50.855-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/molten-unison-401314/global/firewalls/terraform-allow-ssh",
            "log_config": [],
            "name": "terraform-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/networks/terraform-network",
            "priority": 1000,
            "project": "molten-unison-401314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/firewalls/terraform-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.191.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-12-09T15:07:51.718-08:00",
            "id": "projects/molten-unison-401314/global/addresses/private-ip-address",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/networks/terraform-network",
            "prefix_length": 16,
            "project": "molten-unison-401314",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/addresses/private-ip-address"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "vue_ip_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.190.56.141",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-09T15:07:51.526-08:00",
            "id": "projects/molten-unison-401314/global/addresses/vue-ip-lb",
            "name": "vue-ip-lb",
            "prefix_length": 0,
            "project": "molten-unison-401314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/addresses/vue-ip-lb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "vue_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/molten-unison-401314/global/forwardingRules/vue-forwarding-rule",
            "ip_address": "projects/molten-unison-401314/global/addresses/vue-ip-lb",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "vue-forwarding-rule",
            "port_range": "443",
            "project": "molten-unison-401314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/forwardingRules/vue-forwarding-rule",
            "target": "projects/molten-unison-401314/global/targetHttpsProxies/vue-https-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.backend_bucket",
            "google_compute_global_address.vue_ip_lb",
            "google_compute_managed_ssl_certificate.lb_vue_ssl",
            "google_compute_target_https_proxy.vue_lb_default",
            "google_compute_url_map.vue_url_map",
            "google_dns_record_set.frontend",
            "google_storage_bucket.static_website_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/molten-unison-401314/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "project": "molten-unison-401314",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/networks/terraform-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-12-09T15:07:51.056-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/molten-unison-401314/regions/us-central1/routers/terraform-router",
            "name": "terraform-router",
            "network": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/networks/terraform-network",
            "project": "molten-unison-401314",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/regions/us-central1/routers/terraform-router"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "molten-unison-401314/us-central1/terraform-router/terraform-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "terraform-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "molten-unison-401314",
            "region": "us-central1",
            "router": "terraform-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-09T13:58:50.036-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/molten-unison-401314/regions/us-central1/subnetworks/terraform-subnetwork",
            "ip_cidr_range": "10.0.0.0/26",
            "name": "terraform-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/networks/terraform-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "molten-unison-401314",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.3.0.0/20",
                "range_name": "gke-terraform-backend-cluster-services-6c1d1eb9"
              },
              {
                "ip_cidr_range": "10.2.0.0/16",
                "range_name": "gke-terraform-backend-cluster-pods-6c1d1eb9"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/regions/us-central1/subnetworks/terraform-subnetwork",
            "stack_type": "IPV4_ONLY"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "vue_lb_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-09T15:08:24.864-08:00",
            "id": "projects/molten-unison-401314/global/targetHttpsProxies/vue-https-proxy",
            "name": "vue-https-proxy",
            "project": "molten-unison-401314",
            "proxy_bind": false,
            "proxy_id": 304931527137512839,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/targetHttpsProxies/vue-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/sslCertificates/vue-ssl-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/urlMaps/vue-url-map"
          },
          "dependencies": [
            "google_compute_backend_bucket.backend_bucket",
            "google_compute_global_address.vue_ip_lb",
            "google_compute_managed_ssl_certificate.lb_vue_ssl",
            "google_compute_url_map.vue_url_map",
            "google_dns_record_set.frontend",
            "google_storage_bucket.static_website_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "vue_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-09T15:08:13.500-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/backendBuckets/my-backend-bucket",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "AbCAn8e1FKc=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/molten-unison-401314/global/urlMaps/vue-url-map",
            "map_id": 8282941577057881522,
            "name": "vue-url-map",
            "path_matcher": [],
            "project": "molten-unison-401314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/molten-unison-401314/global/urlMaps/vue-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.backend_bucket",
            "google_storage_bucket.static_website_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argoCD",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "3729",
                "uid": "a8ba5b66-2f1f-411c-87b8-df3071c5d9bc"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.my_subnetwork",
            "google_container_cluster.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "cert_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "cert-manager",
            "metadata": [
              {
                "generation": 0,
                "name": "cert-manager",
                "resource_version": "3728",
                "uid": "40b40c3a-805b-4226-9861-668a28a74393"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.my_subnetwork",
            "google_container_cluster.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ingress_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "ingress-nginx",
                "resource_version": "3730",
                "uid": "5ac5b00f-8b6b-4abd-8954-eebba65f4d68"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.my_subnetwork",
            "google_container_cluster.primary"
          ]
        }
      ]
    }
  ]
}